--- a/didattic.html
+++ b/didattic.html
@@ -96,7 +96,8 @@ gli orali di Mercoledi' 8 Febbraio si terranno regolarmente.
  </tr>
   <td width=634 colspan=2>
   <A href="prossimiappelli.pdf">
-  <font color=#0000ff face="Comic Sans MS" size="4"><i>Dates of the next exam sessions</A></SPAN></I><i><font color=#0000ff face="Comic Sans MS" size="4"> (all courses) </i> </FONT></FONT>
+  <font color=#0000ff face="Comic Sans MS" size="4"><i>Dates of the next exam sessions</A></SPAN></I><i><font color=#0000ff face="Comic Sans MS" size="4"> 
+  </i> </FONT></FONT>
   </td>
  </tr>
  <tr>
@@ -107,16 +108,6 @@ gli orali di Mercoledi' 8 Febbraio si terranno regolarmente.
   <td width=634 colspan=2>
   <A href="Ricerca%20Operativa%20M_NEW/Page_LM_NEW.html">
   <font color=#0000ff face="Comic Sans MS" size="4"><i>Operations Research M (Code 72935, Master's Degree Course)</A></I>&nbsp; </FONT> 
-  </td>
- </tr>
-<tr>
-  <td width=197>&nbsp;</td>
-  <td width=235>&nbsp;</td>
- </tr>
- <tr>
-  <td width=634 colspan=2>
-  <A href="Ricerca%20Operativa%20M/Page_LM.html">
-  <font color=#0000ff face="Comic Sans MS" size="4"><i>Operations Research M (Code 34878, OLD Master's Degree Course)</A></I>&nbsp; </FONT> 
   </td>
  </tr>
 <tr>
