--- a/didattic.html
+++ b/didattic.html
@@ -163,7 +163,7 @@ gli orali di Mercoledi' 8 Febbraio si terranno regolarmente.
  <tr>
   <td width=634 colspan=2>
   <A href="http://www.unibo.it/SitoWebDocente/default.htm?upn=silvano.martello%40unibo.it">
-  <font color=#ff0000 face="Comic Sans MS" size="4"><i>For announcements see the official home page</A></I>&nbsp; </FONT>
+  <font color=#ff0000 face="Comic Sans MS" size="4"><i>For announcements see the official home page or Virtuale</A></I>&nbsp; </FONT>
   </td>
  </tr>
   <td width=197>&nbsp;</td>
