--- a/Ricerca Operativa M_NEW/Page_LM_NEW.html
+++ b/Ricerca Operativa M_NEW/Page_LM_NEW.html
@@ -1540,7 +1540,7 @@ lang=EN-US link="#993300" vlink="#CC6633" style='tab-interval:.5in'>
 
 <h2 align=center style='text-align:center'><i><span style='font-size:24.0pt;
 font-family:"Comic Sans MS";mso-fareast-font-family:"Times New Roman";
-color:red'> Operations Research M (Code 72935, new Master's Degree Course)</span></i><span
+color:red'> Operations Research M (Code 72935, Master's Degree Course)</span></i><span
 style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
 
 <div align=center>
