--- a/Ricerca Operativa M_NEW/Page_LM_NEW.html
+++ b/Ricerca Operativa M_NEW/Page_LM_NEW.html
@@ -1564,7 +1564,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   <p class=MsoNormal><i><span style='font-size:13.5pt;font-family:"Comic Sans MS";
   mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
   color:black'><a
-  href="http://www.eng.unibo.it/PortaleEn/Academic+programmes/Teachings/dettaglio.htm?AnnoAccademico=2013&IdComponenteAF=385358"><span
+  href="https://www.unibo.it/sitoweb/silvano.martello/didattica"><span
   style='color:blue'>Syllabus</span></a></span></i><span style='font-family:
   "Arial","sans-serif";mso-fareast-font-family:"Times New Roman";color:black'><o:p></o:p></span></p>
   </td>
