--- a/Ottimizzazione su Reti M/Page_OttReti.html
+++ b/Ottimizzazione su Reti M/Page_OttReti.html
@@ -1554,7 +1554,8 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
 
 <table class=MsoNormalTable border=0 cellpadding=0 width=438 style='width:328.5pt;
  mso-cellspacing:1.5pt;mso-yfti-tbllook:1184' height=270>
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:12.0pt'>
+ <!--
+<tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:12.0pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'>
   <p><span style='font-family:"Arial","sans-serif";color:black'>&nbsp;<o:p></o:p></span></p>
@@ -1564,6 +1565,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   "Arial","sans-serif";color:black'><o:p></o:p></span></p>
   </td>
  </tr>
+-->
  <tr style='mso-yfti-irow:1;height:12.0pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'></td>
@@ -1574,7 +1576,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   <p class=MsoNormal><i><span style='font-size:13.5pt;font-family:"Comic Sans MS";
   mso-fareast-font-family:"Times New Roman";mso-bidi-font-family:Arial;
   color:black'><a
-  href="https://www.unibo.it/it/didattica/insegnamenti/insegnamento/2019/385396"><span
+  href="https://www.unibo.it/sitoweb/silvano.martello/didattica"><span
   style='color:blue'>Syllabus</span></a></span></i><span style='font-family:
   "Arial","sans-serif";mso-fareast-font-family:"Times New Roman";color:black'><o:p></o:p></span></p>
   </td>
@@ -1583,6 +1585,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'></td>
  </tr>
+<!--
  <tr style='mso-yfti-irow:4;height:12.0pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'>
@@ -1593,6 +1596,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   color:black'><o:p></o:p></span></p>
   </td>
  </tr>
+-->
 <!--
  <tr style='mso-yfti-irow:5;height:12.0pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
@@ -1637,7 +1641,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'></td>
  </tr>
-
+<!--
  <tr style='mso-yfti-irow:10;height:7.5pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:7.5pt'>
@@ -1665,7 +1669,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h2>
   color:black'><o:p></o:p></span></p>
   </td>
  </tr>
-
+-->
  <tr style='mso-yfti-irow:11;height:12.0pt'>
   <td width=193 style='width:144.75pt;padding:.75pt .75pt .75pt .75pt;
   height:12.0pt'></td>
