--- a/PhD courses/Page_PhD.html
+++ b/PhD courses/Page_PhD.html
@@ -53,7 +53,7 @@ document [imgName].src = img2;
           <tr>
           <td width="193" height="16"> <i> 
           <A href="PhDProgram2017.pdf">
-          <font color="#0000ff" face="Comic Sans MS" size="4">Syllabus 2017</font></A>
+          <font color="#0000ff" face="Comic Sans MS" size="4">Syllabus</font></A>
           </i></td>
           </tr>
 
@@ -161,6 +161,7 @@ requires some knowledge of <font color="red">Linear programming and Computationa
           </P>
           </td>
 
+<!--
 
           <tr>
           <td width="624" colspan="2">
@@ -170,8 +171,6 @@ Chapters 2 (slides 1-18) and 3 in <a href="http://www.or.deis.unibo.it/staff_pag
 </font></span></a>
           </P>
           </td>
-<!--
-
 -->
 <!--
 
@@ -184,7 +183,6 @@ for Matching and Assignment Problems" will be available soon.
 </font></span></a>
           </P>
           </td>
--->
           <tr>
           <td width="624" colspan="2">
           <P>    
@@ -201,6 +199,7 @@ LAPTOPS, SMART/CELL PHONES, etc must be switched off during lectures.
 </font></span></a>
           </P>
           </td>
+  -->
 <!--
           <tr>
           <td width="624" colspan="2">
