--- a/PhD courses/Page_PhD.html
+++ b/PhD courses/Page_PhD.html
@@ -66,7 +66,6 @@ document [imgName].src = img2;
           </P>
           </td>
           </tr>
--->
           <tr>
           <tr>
           <td width="624" colspan="2">
@@ -88,7 +87,6 @@ requires some knowledge of <font color="red">Graph Theory. <font color="black">S
           </P>
           </td>
           </tr>
-
           <tr>
           <td width="624" colspan="2">
           <P>    
@@ -111,12 +109,12 @@ requires some knowledge of <font color="red">Linear programming and Computationa
           </P>
           </td>
           </tr>
-
+-->
           <tr>
           <td width="624" colspan="2">
           <A href="MatchingAssignment2017_Part1.rar">
           <P>    
-          <span lang="en-us"><font color="#0000ff" face="Comic Sans MS" size="4">Matching and Assignment Part 1 (Corrected exercise, reload)</font></span></a></P>
+          <span lang="en-us"><font color="#0000ff" face="Comic Sans MS" size="4">Matching and Assignment Part 1)</font></span></a></P>
           </td>
           </tr>
 
