--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ Ranking of the World's Top 2% Scientists (Stanford University)</a>
 </LI>
 <LI align="justify">
 <FONT size="+1"><a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">h-index</B></font></a>
-<font color="blue"> = 64</font> (computed by
+<font color="blue"> = 65</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a> ).
 Also see 
 <a href="https://topitalianscientists.org/tis/2386/Silvano_Martello_-_Top_Italian_Scientist_in_Mathematics" target="_blank">
@@ -702,15 +702,16 @@ Research.com Best Scholars</a>
 </LI>
 
 <LI align="justify">
-<FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-10 index</font></a>
-<font color="blue"> = 124</font> (computed by
+<FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">
+ i-10 index</font></a>
+<font color="blue"> = 126</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
 
 <LI align="justify">
 <FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-100 index</font></a>
-<font color="blue"> = 47</font> (computed by
+<font color="blue"> = 48</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
@@ -718,7 +719,7 @@ Research.com Best Scholars</a>
 
 <LI align="justify">
 <FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-1000 index</font></a>
-<font color="blue"> = 3</font> (computed by
+<font color="blue"> = 4</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
@@ -728,7 +729,7 @@ Research.com Best Scholars</a>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue">Web of Science <a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">
-h-index</font></a> = 37</font> (computed by <a href="https://www.webofscience.com/wos/author/search" target="_blank">
+h-index</font></a> = 40</font> (computed by <a href="https://www.webofscience.com/wos/author/search" target="_blank">
 ISI Web of Knowledge</a>) </P>
 </LI>
 
@@ -736,7 +737,7 @@ ISI Web of Knowledge</a>) </P>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue">Scopus <a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">
-h-index</font></a> = 43</font> (computed by <a href="http://www.scopus.com/" target="_blank">
+h-index</font></a> = 44</font> (computed by <a href="http://www.scopus.com/" target="_blank">
 Scopus</a>) </P>
 </LI>
 
